src/components/button/Button.module.scss
.Button {
  // margin: -1px;
  // padding: 9px 16px;
  min-height: 28px;

  &.hover:hover:not(.selected) {
    // background: hsl(210, 15%, 93%);
    background: var(--hover-color);
  }

  &:not(.primary):not(.solid):not(.hover) {
    box-shadow: inset 0 0 0 1px hsl(210, 15%, 88%);

    &:active {
      background: white;
      box-shadow: none;
    }
  }

  &.primary:not(.solid):not(.hover) {
    box-shadow: inset 0 0 0 1px hsl(210, 85%, 60%);

    &:active {
      background: hsl(210, 100%, 93%);
    }
  }

  &:not(:disabled):active {
    filter: brightness(0.93);
  }

  &.primary.solid:not(:disabled):active {
    filter: brightness(0.85);
  }

  &:disabled {
    opacity: 0.6;
    cursor: default;
  }
}

